--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "lint": "next lint",
+    "dev": "run-s context:manifest dev:next",
+    "dev:next": "next dev -p 3000",
     "start": "next start",
-    "lint": "next lint"
+    "build": "run-s context:manifest build:next",
+    "build:next": "next build",
+    "context:manifest": "uniform context manifest download --output ./lib/context/manifest.json"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.15.1",
@@ -17,10 +20,14 @@
     "@uniformdev/canvas-contentful": "^17.5.0",
     "@uniformdev/canvas-react": "^17.5.0",
     "@uniformdev/cli": "^17.5.0",
+    "@uniformdev/context": "^17.5.0",
+    "@uniformdev/context-next": "^17.5.0",
+    "@uniformdev/context-react": "^17.5.0",
     "contentful": "^9.2.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
+    "npm-run-all": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
